<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="@dimen/common_margin_100"
        android:layout_height="@dimen/common_margin_60"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/common_margin_30"
        android:src="@drawable/logo"
        android:scaleType="fitXY"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_margin_200"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.0px"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/common_margin_10"
        app:cardElevation="10dp"
        android:layout_marginStart="@dimen/common_margin_20"
        android:layout_marginEnd="@dimen/common_margin_20"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp" >
        <RelativeLayout
            android:layout_marginTop="@dimen/common_margin_20"
            android:layout_marginBottom="@dimen/common_margin_20"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/username_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_margin_40"
                android:layout_marginStart="@dimen/common_margin_20"
                android:layout_marginEnd="@dimen/common_margin_20"
                android:layout_alignParentTop="true"
                android:background="@drawable/edittext_bg">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txt_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/common_margin_30"
                    android:layout_marginEnd="@dimen/common_margin_10"
                    android:background="@null"
                    android:ems="10"
                    android:fontFamily="@font/montserrat_light"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/email_phone"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/hint_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/common_text_size_14" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/password_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_margin_40"
                android:layout_marginTop="@dimen/common_margin_20"
                android:layout_marginStart="@dimen/common_margin_20"
                android:layout_marginEnd="@dimen/common_margin_20"
                android:layout_below="@id/username_container"
                android:background="@drawable/edittext_bg">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/common_margin_30"
                    android:layout_marginEnd="@dimen/common_margin_10"
                    android:background="@null"
                    android:ems="10"
                    android:fontFamily="@font/montserrat_light"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:hint="@string/password_lbl"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/hint_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/common_text_size_14" />
                <ToggleButton
                    android:id="@+id/tbtn_show_password"
                    android:layout_width="@dimen/common_margin_18"
                    android:layout_height="@dimen/common_margin_18"
                    android:background="@drawable/icon_selector"
                    android:layout_centerVertical="true"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/common_margin_18"
                    android:textOn=""
                    android:textOff=""
                    android:focusable="false" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/common_margin_40"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                >
                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_bg"
                    android:text="@string/sign_up_text"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/montserrat_bold"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/common_margin_20"
                    android:layout_toRightOf="@id/btn_signup"
                    android:background="@drawable/button_bg"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/signin_lbl"
                    android:textAllCaps="false"/>
            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>